# Tetris

./: .gitignore  CMakeLists.txt
src/: Core.h  DiscordStatus.cpp  DiscordStatus.h  Global.h  Tile.cpp  Tile.h  main.cpp
